# StegVerse-SDK

./: .gitignore  ADAPTER_SYSTEM_BOUNDARY_FIXTURE_MIRROR_HANDOFF.md  ADAPTER_SYSTEM_BOUNDARY_FIXTURE_PROVENANCE_HANDOFF.md  INTEGRATION_SNIPPETS.md  Manifest_and_Receipt_Governance_Boundary.md  README.md  SDK_MIRROR_HANDOFF.md  SDK_README.md  STEGVERSE_SDK_MIRROR_HANDOFF.md  SYSTEM_BOUNDARY_ADAPTER_FIXTURE_HANDOFF.md  SYSTEM_BOUNDARY_AUTOMATION_HANDOFF.md  about.html  demo.html  demo_safe_launch.py  guarantees.html  headless-release-orchestrator.yml  index.html  iosnoperiod.md  methodology.html  pricing.html  product.html  pyproject.toml  requirements.txt  sdk.capabilities.json  setup.py  stegverse.architecture.md  what-we-do.html
data/: ai-entry-receipt-issuer-boundary.json  ai-entry-sdk-access-decision-boundary.json  ai-entry-sdk-access-decision-completion.json  goal4-demo-session-interface-stabilization.json  goal7-repo-standards-gate-record-status.json  goal8-completion-checkpoint.json  goal8-continuation-checkpoint.json  goal8-stabilization.json  sdk-validation-visibility-confirmation.json
docs/: AI_ENTRY_BACKEND_SERVICE_SELECTION.md  AI_ENTRY_RECEIPT_CAPTURE_STATUS.md  AI_ENTRY_SDK_RECEIPT_CAPTURE.md  AI_ENTRY_SDK_RUN_STATUS.md  AI_SAFETY_TRANSITION_ADMISSIBILITY.md  DECISION_VOCABULARY.md  DYNAMIC_ADMISSIBILITY.md  ECOSYSTEM_CHAT_BOUND_WRITE_ADAPTER.md  ECOSYSTEM_CHAT_DEPLOYMENT_READINESS.md  ECOSYSTEM_CHAT_DESTINATION_BINDING.md  ECOSYSTEM_CHAT_ISSUER.md  ECOSYSTEM_CHAT_LOCAL_ISSUER.md  ECOSYSTEM_CHAT_LOCAL_RUNNER.md  ECOSYSTEM_CHAT_LOCAL_WRITE_ADAPTER.md  (+48 more)
(+356 files in other folders)
