[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegverse-sdk"
version = "1.0.3"
description = "StegVerse SDK for governed AI execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "StegVerse", email = "dev@stegverse.org"}
]
keywords = ["ai", "governance", "stegverse", "admissibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/StegVerse-org/StegVerse-SDK"
Documentation = "https://github.com/StegVerse-org/StegVerse-SDK#readme"
Repository = "https://github.com/StegVerse-org/StegVerse-SDK"
Issues = "https://github.com/StegVerse-org/StegVerse-SDK/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stegverse*"]
